@@ -1,3 +1,10 @@
+2009-06-05 Diegocr
+	* Ixemul is now able to be loaded dinamically depending which 
+	  functions are used. That means, if you use V49 SDK and only
+	  V48 functions are used, the requested ixemul.library will be V48.
+	  However, this only seems to work with no-baserel code.. Anyhow,
+	  thats the 90% of the software, i guess.
+
 2009-05-29 Diegocr
 	* Updated IXPrefs to Version 2.8
 	  
